<resources>
    <string name="app_name">CaltrainPlus</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="title_activity_maps">Caltrain Map</string>

    <string name="api_key_511">ac70d686-386f-4216-b615-3bf69d8fdc0f</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <string name="app_info">Welcome to Caltrain Plus!  Just enter your destination station and
        you will get a notification when you are approaching your station.  You can also view your current
        location on the map once you select "Begin trip".
    </string>

    <string name="enter_destination">Select destination station: </string>
    <string name="button_text">Begin trip!</string>
    <string name="arrival_notification_toggle">Arrival notification setting:</string>

    <!-- Shared preferences -->
    <string name="station_key" translatable="false">station_key</string>
    <string name="station_position_key" translatable="false">station_position_key</string>
    <string name="notification_key" translatable="false">notification_key</string>
    <string name="distance_key" translatable="false">distance_key</string>
    <string name="data_loaded_key" translatable="false">data_loaded_key</string>

    <!-- Intent key -->
    <string name="geofence_location_key" translatable="false">geofence_location_key</string>
    <string name="geofence_request_id" translatable="false">destination_request_id</string>

    <!-- For notification -->
    <string name="notification_title">Approaching destination:</string>

    <!-- Widget -->
    <string name="widget_dest">Destination: Mountain View Caltrain Station</string>
    <string name="widget_distance">Distance away: 3.2 mi</string>
    <string name="add_widget">Add widget</string>

    <!-- For content descriptions -->
    <string name="notification_toggle">Toggle notifications</string>

    <string name="no_data_available">Unable to retrieve station data.  Please check your network connection.</string>

</resources>
